时间差标定更新

--- a/config/euroc_config.yaml
+++ b/config/euroc_config.yaml
@@ -64,6 +64,9 @@ acc_w: 0.0002         # accelerometer bias random work noise standard deviation.
 gyr_w: 2.0e-5       # gyroscope bias random work noise standard deviation.     #4.0e-5
 g_norm: 9.81007     # gravity magnitude
 
+estimate_td: 0      # online estimate time offset between camera and imu
+td: 0               # image_clock + td = imu_clock
+
 
 #loop closure parameters
 loop_closure: 1   #if you want to use loop closure to minimize the drift, set loop_closure true and give your brief pattern file path and vocabulary file path accordingly;
