添加对RabbitMQ和JSON的支持

--- a/estimator/CMakeLists.txt
+++ b/estimator/CMakeLists.txt
@@ -56,4 +56,7 @@ target_link_libraries(vins_estimator
 	${CERES_LIBRARIES} 
 	${OpenCV_LIBRARIES}
 	DBoW
+	rabbitmq::rabbitmq-static
 )
+
+target_link_libraries(vins_estimator debug ${JSON_DEBUG_LIB} optimized ${JSON_RELEASE_LIB})
