--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,14 @@ find_package(OpenCV REQUIRED)
 find_package(Ceres REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Pangolin REQUIRED)
+find_package(rabbitmq-c REQUIRED)
 find_package(Boost REQUIRED COMPONENTS filesystem program_options system)
 
+find_path(JSON_INCLUDE_DIR NAMES json HINTS ../jsoncpp/include)
+find_file(JSON_RELEASE_LIB json_vc141_libmt.lib HINTS ../jsoncpp/lib)
+find_file(JSON_DEBUG_LIB json_vc141_libmtd.lib HINTS ../jsoncpp/lib)
+
+include_directories(${JSON_INCLUDE_DIR})
 include_directories(${CERES_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${EIGEN3_INCLUDE_DIRS})
